fixed alignment of main part of code when screen size is small

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,8 @@ footer {
 
     main {
         display: flex;
-        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: #ffffff;
     }
@@ -146,8 +147,7 @@ footer {
         height: 30%;
         background-color: #0072bb;
         display: flex;
-        justify-content: flex-start;
-        align-self: flex-start;
+        align-items: center;
         flex-direction: column;
         margin-bottom: 20px;
     }
@@ -157,8 +157,7 @@ footer {
         height: 33%;
         background-color: #0072bb;
         display: flex;
-        justify-content: flex-start;
-        align-self: flex-start;
+        align-items: center;
         flex-direction: column;
         margin-bottom: 20px;
     }
@@ -168,8 +167,7 @@ footer {
         height: 28%;
         background-color: #0072bb;
         display: flex;
-        justify-content: flex-start;
-        align-self: flex-start;
+        align-items: center;
         flex-direction: column;
     }
     
@@ -179,14 +177,19 @@ footer {
     }
     
     #search-engine-optimization img, #social-media-marketing img {
-        max-height: 200px;
-        padding-right: 25px;
+        max-height: 250px;
+        max-width: 200px;
+        align-items: center;
+        padding-bottom: 20px;
     }
-    
+
     #online-reputation-management img {
-        max-height: 200px;
+        max-height: 250px;
+        max-width: 200px;
+        align-items: center;
+        padding-top: 20px;
     }
-    
+
     aside {
         margin-right: 15px;
         padding: 20px;
